Image stretch in create project corrected
TG-174

--- a/src/app/dashboard/projects/create-project/create-project.component.sass
+++ b/src/app/dashboard/projects/create-project/create-project.component.sass
@@ -104,6 +104,10 @@
   border-radius: 8px
   cursor: pointer
 
-.ps-radius-image
-  border-radius: 4px
+.ps-image-resize
+  border-radius: 4px !important
+  height: 100px
+  width: 100px
+  background: no-repeat center center
+  background-size: cover
   cursor: pointer
